# claude-code-model-gateway

./: .gitignore  CLAUDE.md  Dockerfile  MANIFEST.in  Makefile  README.md  docker-compose.yaml  gateway-test.yaml  pyproject.toml  requirements.txt
.claude/commands/: third-party-models.md
.factory/: project.json
.factory/tasks/: active.yaml  ba7f5acb-4b27-4f8b-9469-2d0a84b9f2a4.yaml
.factory/worktrees/task-bee4f48c/: CLAUDE.md  README.md  gateway.yaml  pyproject.toml
.factory/worktrees/task-bee4f48c/.factory/: project.json
.factory/worktrees/task-bee4f48c/.factory/tasks/: ba7f5acb-4b27-4f8b-9469-2d0a84b9f2a4.yaml
.factory/worktrees/task-bee4f48c/.pip_packages/: __editable__.claude_code_model_gateway-0.1.0.pth  __editable___claude_code_model_gateway_0_1_0_finder.py
.factory/worktrees/task-bee4f48c/.pip_packages/black-26.3.0.dist-info/: RECORD
.factory/worktrees/task-bee4f48c/.pip_packages/build-1.4.0.dist-info/: RECORD
.factory/worktrees/task-bee4f48c/.pip_packages/claude_code_model_gateway-0.1.0.dist-info/: METADATA  RECORD  entry_points.txt  top_level.txt
.factory/worktrees/task-bee4f48c/.pip_packages/coverage-7.13.4.dist-info/: RECORD
.factory/worktrees/task-bee4f48c/.pip_packages/pygments-2.19.2.dist-info/: RECORD
.factory/worktrees/task-bee4f48c/.pip_packages/pytest-9.0.2.dist-info/: RECORD
.factory/worktrees/task-bee4f48c/.pip_packages/ruff-0.15.5.dist-info/: RECORD
.factory/worktrees/task-bee4f48c/scripts/: install.sh
.factory/worktrees/task-bee4f48c/service/systemd/: claude-code-model-gateway.service
.factory/worktrees/task-bee4f48c/src/: anthropic_passthrough.py  cli.py  models.py  retry.py
.factory/worktrees/task-bee4f48c/src/config/: __init__.py
.factory/worktrees/task-bee4f48c/src/validation/: testing.py
.factory/worktrees/task-bee4f48c/tests/: __init__.py  test_anthropic_passthrough.py  test_cli.py  test_cli_config.py  test_errors.py  test_models.py  test_service.py
examples/: basic.sh
scripts/: build-package.sh  healthcheck.sh  install.sh  start-claude-via-gateway.sh  start-test-gateway.sh  uninstall.sh  update.sh
service/conf/: environment  gateway.yaml
service/initd/: claude-code-model-gateway
service/launchd/: com.anthropic.claude-code-model-gateway.plist
service/openrc/: claude-code-model-gateway
service/systemd/: claude-code-model-gateway.sysusers  claude-code-model-gateway.tmpfiles  claude-code-model-gateway@.service
src/: __init__.py  anthropic_passthrough.py  cache.py  cli.py  config.py  error_handling.py  error_recovery_strategies.py  errors.py  gateway.py  interceptor.py  logging_config.py  main.py  models.py  providers.py  proxy.py  response_cache.py  retry.py  retry_budget.py  router.py  service.py  token_count_cache.py
src/config/: __init__.py  loader.py  manager.py  schema.py  testing.py  validator.py
src/translators/: __init__.py  anthropic.py  base.py  bedrock.py  gemini.py  openai.py  registry.py  types.py
src/validation/: __init__.py  testing.py  validator.py
tests/: test_adaptive_retry.py  test_anthropic_passthrough.py  test_cache.py  test_cache_advanced.py  test_caching_integration.py  test_cli.py  test_cli_models.py  test_cli_validation.py  test_config.py  test_config_loader.py  test_config_manager.py  test_config_schema.py  test_config_testing.py  test_config_validation_tools.py  test_config_validator_module.py  test_error_handling.py  test_error_recovery_strategies.py  test_gateway.py  test_interceptor.py  test_logging.py  test_logging_advanced.py  test_models.py  test_providers.py  test_proxy.py  test_retry.py  test_retry_budget.py  test_router.py  test_service.py  test_testing.py  test_token_count_cache.py  test_translator_anthropic.py  test_translator_bedrock.py  test_translator_gemini.py  test_translator_openai.py  test_translator_registry.py  test_translators_types.py  test_validator.py
