[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-model-gateway"
version = "0.1.0"
description = "An HTTP model gateway/proxy service with multi-provider AI backend support"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Anonymous"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: System :: Networking",
]
dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "build>=1.0.0",
]

[project.scripts]
claude-code-model-gateway = "src.cli:main"
claude-code-model-gateway-service = "src.service:main"

[project.urls]
Homepage = "https://github.com/anthropic/claude-code-model-gateway"
Documentation = "https://github.com/anthropic/claude-code-model-gateway#readme"
Repository = "https://github.com/anthropic/claude-code-model-gateway"
Issues = "https://github.com/anthropic/claude-code-model-gateway/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = [
    "service/systemd/*.service",
    "service/systemd/*.tmpfiles",
    "service/systemd/*.sysusers",
    "service/initd/*",
    "service/openrc/*",
    "service/launchd/*.plist",
    "service/conf/*",
    "scripts/*.sh",
]

[tool.setuptools.data-files]
"share/claude-code-model-gateway/service/systemd" = [
    "service/systemd/claude-code-model-gateway.service",
    "service/systemd/claude-code-model-gateway@.service",
    "service/systemd/claude-code-model-gateway.tmpfiles",
    "service/systemd/claude-code-model-gateway.sysusers",
]
"share/claude-code-model-gateway/service/initd" = [
    "service/initd/claude-code-model-gateway",
]
"share/claude-code-model-gateway/service/openrc" = [
    "service/openrc/claude-code-model-gateway",
]
"share/claude-code-model-gateway/service/launchd" = [
    "service/launchd/com.anthropic.claude-code-model-gateway.plist",
]
"share/claude-code-model-gateway/service/conf" = [
    "service/conf/environment",
    "service/conf/gateway.yaml",
]
"share/claude-code-model-gateway/scripts" = [
    "scripts/install.sh",
    "scripts/uninstall.sh",
    "scripts/update.sh",
    "scripts/healthcheck.sh",
    "scripts/build-package.sh",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
